# rust-mcpr

./: .gitignore  Cargo.toml  Makefile  README.md
macros/: Cargo.toml
macros/src/: lib.rs
registry/: Cargo.toml  README.md
registry/src/: lib.rs
src/: lib.rs  router.rs
