[package]
name = "mcp-router"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
macros = { path = "./macros" }
registry = { path = "./registry" }
serde = "1.0.228"
serde_json = "1.0.0"
udsn = { version = "0.2.1", features = ["json"] }

[dev-dependencies]
assert-json-diff = "2"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
