[package]
name = "mcp-router"
version = "0.1.1"
edition = "2024"
description = "An MCP Router for the masses. Inspired by the myriad of difficult to use, limited use cased libraries currently available"
authors = ["tony-o"]
readme = "README.md"
repository = "https://github.com/tony-o/rust-mcpr"
license = "Artistic-2.0"
keywords = ["mcp", "ai", "macros", "http"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
mcp-router-macros = { path = "./macros", version = "0.1.0" }
mcp-router-registry = { path = "./registry", version = "0.1.0" }
serde = "1.0.0"
serde_json = "1.0.0"
udsn = { version = "0.2.1", features = ["json"] }

[dev-dependencies]
assert-json-diff = "2"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
