[package]
name = "mcp-router-registry"
version = "0.1.0"
edition = "2024"
description = "Registry mechanism `mcp-router`, makes the router code simple."
authors = ["tony-o"]
readme = "README.md"
repository = "https://github.com/tony-o/rust-mcpr"
license = "Artistic-2.0"
keywords = ["mcp", "ai", "macros", "http"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.0"
tracing = "0.1.44"
udsn = "0.2.1"
